Changes in @NEW@:
  o Client Changes:
    * A new configuration option, "flavorPreferences", has been added.
      The client uses this list of flavors in trove selection. (CNY-1710)
    * Large files are now compressed on disk instead of in memory when
      creating rollbacks. (CNY-1896)
    * The Conary client API is now more careful with releasing open
      file descriptors. (CNY-1834)

  o Server Changes:
    * Setting "forceSSL" once again requires a HTTPS connection be
      used when authentication data is passed to an Apache based
      Conary Repository. (CNY-1880)
    * A bug that caused incorrect values for sourceItemId and
      clonedFromId to be used when groups and components were
      committed as part of one changeset has been fixed. (CNY-1903)
    * A bug that caused the Latest table to be rebuilt incorrectly
      when migrating to schema version 15.0 has been fixed.
      (CNY-1909)

  o Build Changes:
    * Redirects will now be followed in group recipes.  Previously
      including redirects would result in an error. (CNY-1693)
    * Derived recipes can now be based on troves which have files
      that have the same content (SHA1) as each other but are
      members of different link groups (are not intended to be
      installed as hard links to each other). (CNY-1733)
    * Derived packages now work properly if the troves they are based
      on contain dangling symlinks. (CNY-1914)
    * Symbolic links that have not changed in a derived package are
      now correctly ignored by policies that are not interested in
      unmodified files. (CNY-1879)

Changes in 1.1.90:
  o Major Changes:
    * Label multiplicity, in which a trove on the same label
      appearing on multiple branches was understood as meaning that
      all the trove can be installed at once, is being generally
      deprecated.  Instead, a newer trove on a different branch that
      ends with the same label as an older trove will be considered